# tealinux-modularitea-libs

./: .gitignore  Cargo.toml  PKGBUILD  api.md  install.sh  readme.md
data/grub-theme/aesthetic/: manifest.json
data/grub-theme/anime-1/: manifest.json
data/grub-theme/bsol/: manifest.json
data/grub-theme/cartoon-girl/: manifest.json
data/grub-theme/doraemon/: manifest.json
data/grub-theme/gradient-color/: manifest.json
data/grub-theme/linux-mind/: manifest.json
data/grub-theme/lorem-loader/: grub  manifest.json  theme.txt
data/grub-theme/minegrub/: manifest.json
data/grub-theme/minegrub-theme/: update_theme.py
data/grub-theme/neon-purple/: manifest.json
data/grub-theme/plasma-dark-1/: install.sh  manifest.json  theme.txt
data/grub-theme/plasma-dark-1/icons/: recovery.pbg
data/grub-theme/sekiro/: manifest.json
data/grub-theme/sekiro-shadow/: manifest.json
data/grub-theme/windows/: manifest.json
src/: config.rs  error.rs  lib.rs
src/domain/: aur_package.rs  mod.rs  profile.rs  system.rs  task.rs
src/executor/: mod.rs  runner.rs
src/helper/: grubchanger.rs  mod.rs  os.rs
src/infrastructure/: aur_client.rs  fs.rs  grub.rs  mod.rs  news_parser.rs  pacman.rs  paru.rs  systemctl.rs
src/loader/: mod.rs  toml_loader.rs
src/planner/: mod.rs  task_planner.rs
src/privilege/: mod.rs  runner.rs
testfiles/: grub
tests/: flow_test.rs
