[package]
name = "modularitea-libs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tea_partition_generator = { git = "https://github.com/tealinuxos/tea_partition_generator.git", branch = "master" }